--- a/catppuccin-instagram.user.css
+++ b/catppuccin-instagram.user.css
@@ -7,372 +7,217 @@
 
 @preprocessor stylus
 
-@var select flavor 'Flavour' [
-  'Latte',
-  'Frappe',
-  'Macchiato',
-  'Mocha',
-  'Espresso'
+@var select flavor "Flavour" [
+  "'latte'",
+  "'frappe'",
+  "'macchiato'",
+  "'mocha'",
+  "'espresso'",
 ]
 
-@var select accent 'Accent Colour' [
-  'Blue',
-  'Flamingo',
-  'Green',
-  'Lavender',
-  'Mantle',
-  'Maroon',
-  'Mauve',
-  'Peach',
-  'Pink',
-  'Red',
-  'Rosewater',
-  'Sapphire',
-  'Sky',
-  'Teal',
-  'Yellow'
+@var select accent "Accent Colour" [
+  "'blue'",
+  "'flamingo'",
+  "'green'",
+  "'lavender'",
+  "'mantle'",
+  "'maroon'",
+  "'mauve'",
+  "'peach'",
+  "'pink'",
+  "'red'",
+  "'rosewater'",
+  "'sapphire'",
+  "'sky'",
+  "'teal'",
+  "'yellow'",
 ]
 
-@var number scrollbar_width 'Scrollbar Width (in pixels)' 5
+@var number scrollbar_width "Scrollbar Width (in pixels)" 5
 ==/UserStyle== */
 
-@-moz-document domain('instagram.com')
-  if flavor == 'Latte'
-    flavor = 'latte'
-  else if flavor == 'Frappe'
-    flavor = 'frappe'
-  else if flavor == 'Macchiato'
-    flavor = 'macchiato'
-  else if flavor == 'Mocha'
-    flavor = 'mocha'
-  else if flavor == 'Espresso'
-    flavor = 'espresso'
+@-moz-document domain('instagram.com') {
+  @import url('https://unpkg.com/@catppuccin/palette/css/catppuccin.css');
 
-  if accent == 'Blue'
-    accent = 'blue'
-  else if accent == 'Flamingo'
-    accent = 'flamingo'
-  else if accent == 'Green'
-    accent = 'green'
-  else if accent == 'Lavender'
-    accent = 'lavender'
-  else if accent == 'Mantle'
-    accent = 'mantle'
-  else if accent == 'Maroon'
-    accent = 'maroon'
-  else if accent == 'Mauve'
-    accent = 'mauve'
-  else if accent == 'Peach'
-    accent = 'peach'
-  else if accent == 'Pink'
-    accent = 'pink'
-  else if accent == 'Red'
-    accent = 'red'
-  else if accent == 'Rosewater'
-    accent = 'rosewater'
-  else if accent == 'Sapphire'
-    accent = 'sapphire'
-  else if accent == 'Sky'
-    accent = 'sky'
-  else if accent == 'Teal'
-    accent = 'teal'
-  else if accent == 'Yellow'
-    accent = 'yellow'
+  // Gets a colour from the palette
+  get(clr, model = false) {
+    suffix = model ? '-' + model : '';
+    return s('var(--ctp-%s-%s%s)', unquote(flavor), unquote(clr), unquote(suffix));
+  }
 
-  // TODO: Move the palette to a separate repository.
-  catppuccin = {
-    'espresso': {
-      'rosewater': #f5e0dc,
-      'flamingo': #f2cdcd,
-      'pink': #f5c2e7,
-      'mauve': #cba6f7,
-      'red': #f38ba8,
-      'maroon': #eba0ac,
-      'peach': #fab387,
-      'yellow': #f9e2af,
-      'green': #a6e3a1,
-      'teal': #94e2d5,
-      'sky': #89dceb,
-      'sapphire': #74c7ec,
-      'blue': #89b4fa,
-      'lavender': #b4befe,
-      'text': #cdd6f4,
-      'subtext1': #bac2de,
-      'subtext0': #a6adc8,
-      'overlay2': #9399b2,
-      'overlay1': #7f849c,
-      'overlay0': #6c7086,
-      'surface2': #585b70,
-      'surface1': #45475a,
-      'surface0': #313244,
-      'base': #000,
-      'mantle': #010101,
-      'crust': #020202
-    },
-    'mocha': {
-      'rosewater': #f5e0dc,
-      'flamingo': #f2cdcd,
-      'pink': #f5c2e7,
-      'mauve': #cba6f7,
-      'red': #f38ba8,
-      'maroon': #eba0ac,
-      'peach': #fab387,
-      'yellow': #f9e2af,
-      'green': #a6e3a1,
-      'teal': #94e2d5,
-      'sky': #89dceb,
-      'sapphire': #74c7ec,
-      'blue': #89b4fa,
-      'lavender': #b4befe,
-      'text': #cdd6f4,
-      'subtext1': #bac2de,
-      'subtext0': #a6adc8,
-      'overlay2': #9399b2,
-      'overlay1': #7f849c,
-      'overlay0': #6c7086,
-      'surface2': #585b70,
-      'surface1': #45475a,
-      'surface0': #313244,
-      'base': #1e1e2e,
-      'mantle': #181825,
-      'crust': #11111b
-    },
-    'macchiato': {
-      'rosewater': #f4dbd6,
-      'flamingo': #f0c6c6,
-      'pink': #f5bde6,
-      'mauve': #c6a0f6,
-      'red': #ed8796,
-      'maroon': #ee99a0,
-      'peach': #f5a97f,
-      'yellow': #eed49f,
-      'green': #a6da95,
-      'teal': #8bd5ca,
-      'sky': #91d7e3,
-      'sapphire': #7dc4e4,
-      'blue': #8aadf4,
-      'lavender': #b7bdf8,
-      'text': #cad3f5,
-      'subtext1': #b8c0e0,
-      'subtext0': #a5adcb,
-      'overlay2': #939ab7,
-      'overlay1': #8087a2,
-      'overlay0': #6e738d,
-      'surface2': #5b6078,
-      'surface1': #494d64,
-      'surface0': #363a4f,
-      'base': #24273a,
-      'mantle': #1e2030,
-      'crust': #181926
-    },
-    'frappe': {
-      'rosewater': #f2d5cf,
-      'flamingo': #eebebe,
-      'pink': #f4b8e4,
-      'mauve': #ca9ee6,
-      'red': #e78284,
-      'maroon': #ea999c,
-      'peach': #ef9f76,
-      'yellow': #e5c890,
-      'green': #a6d189,
-      'teal': #81c8be,
-      'sky': #99d1db,
-      'sapphire': #85c1dc,
-      'blue': #8caaee,
-      'lavender': #babbf1,
-      'text': #c6d0f5,
-      'subtext1': #b5bfe2,
-      'subtext0': #a5adce,
-      'overlay2': #949cbb,
-      'overlay1': #838ba7,
-      'overlay0': #737994,
-      'surface2': #626880,
-      'surface1': #51576d,
-      'surface0': #414559,
-      'base': #303446,
-      'mantle': #292c3c,
-      'crust': #232634
-    },
-    'latte': {
-      'rosewater': #dc8a78,
-      'flamingo': #dd7878,
-      'pink': #ea76cb,
-      'mauve': #8839ef,
-      'red': #d20f39,
-      'maroon': #e64553,
-      'peach': #fe640b,
-      'yellow': #df8e1d,
-      'green': #40a02b,
-      'teal': #179299,
-      'sky': #04a5e5,
-      'sapphire': #209fb5,
-      'blue': #1e66f5,
-      'lavender': #7287fd,
-      'text': #4c4f69,
-      'subtext1': #5c5f77,
-      'subtext0': #6c6f85,
-      'overlay2': #7c7f93,
-      'overlay1': #8c8fa1,
-      'overlay0': #9ca0b0,
-      'surface2': #acb0be,
-      'surface1': #bcc0cc,
-      'surface0': #ccd0da,
-      'crust': #dce0e8,
-      'mantle': #e6e9ef,
-      'base': #eff1f5
+  get_transparent(clr, amount) {
+    return convert(s('@css{ rgba(%s, %s) }', get(clr, 'raw'), amount));
+  }
+
+  // Always dark/light independent of the flavor
+  dark_color = flavor == 'latte' ? 'text' : 'crust';
+  light_color = flavor == 'latte' ? 'crust' : 'text';
+
+  // Override default variables
+  * {
+    --web-always-black: get(dark_color);
+    --web-always-white: get(light_color);
+
+    --overlay-alpha-80: get_transparency(dark_color, 0.5);
+
+    --ig-primary-background: get('base', 'raw');
+    --ig-secondary-background: get('surface0', 'raw');
+    --ig-banner-background: get('crust', 'raw');
+    --ig-highlight-background: get('surface0', 'raw');
+    --ig-elevated-background: get('crust', 'raw');
+
+    --ig-primary-button: get(accent, 'raw');
+    --ig-primary-button-hover: get(accent, 'raw');
+
+    --ig-secondary-button-background: get('surface0', 'raw');
+    --ig-secondary-button-hover: get('surface1', 'raw');
+    --ig-secondary-button: get('text', 'raw');
+
+    --ig-primary-text: get('text', 'raw');
+    --ig-secondary-text: get('subtext0', 'raw');
+    --ig-tertiary-text: get('subtext0', 'raw');
+    --wbloks-primary-text: get('text');
+
+    --ig-separator: get('overlay0', 'raw');
+    --post-separator: get('overlay0', 'raw');
+    --ig-elevated-separator: get('overlay0', 'raw');
+    --ig-stroke: get('overlay0', 'raw');
+    --grey-2: get('overlay0', 'raw');
+
+    --ig-link: get(accent, 'raw');
+    --ig-error-or-destructive: get('red', 'raw');
+    --ig-success: get('green', 'raw');
+  }
+
+  // Sidebar
+  .x1xgvd2v {
+    background-color: get('crust');
+
+    &[style='transform: translateX(0px);'] {
+      background-color: get('mantle');
     }
   }
 
-  // Gets a colour from the palette
-  get($flavor, $accent = false)
-    if $accent
-      return catppuccin[$flavor][$accent]
-    else
-      return catppuccin[flavor][$flavor]
-
-  // Converts the colour to an "r, g, b" string
-  raw($color)
-    return s('%s, %s, %s', red($color), green($color), blue($color))
-
-  // Always dark/light independent of the flavor
-  dark = get(flavor == 'latte' ? 'text' : 'crust')
-  light = get(flavor == 'latte' ? 'crust' : 'text')
-
-  // Override default variables
-  *
-    --web-always-black: raw(dark)
-    --web-always-white: raw(light)
-
-    --overlay-alpha-80: rgba(get('surface0'), 0.5)
-
-    --ig-primary-background: raw(get('base'))
-    --ig-secondary-background: raw(get('surface0'))
-    --ig-banner-background: raw(get('crust'))
-    --ig-highlight-background: raw(get('surface0'))
-    --ig-elevated-background: raw(get('crust'))
-
-    --ig-primary-button: raw(get(accent))
-    --ig-primary-button-hover: raw(darken(get(accent), 10%))
-
-    --ig-secondary-button-background: raw(get('surface0'))
-    --ig-secondary-button-hover: raw(get('surface1'))
-    --ig-secondary-button: raw(get('text'))
-
-    --ig-primary-text: raw(get('text'))
-    --ig-secondary-text: raw(get('subtext0'))
-    --ig-tertiary-text: raw(get('subtext0'))
-    --wbloks-primary-text: get('text')
-
-    --ig-separator: raw(get('overlay0'))
-    --post-separator: raw(get('overlay0'))
-    --ig-elevated-separator: raw(get('overlay0'))
-    --ig-stroke: raw(get('overlay0'))
-    --grey-2: raw(get('overlay0'))
-
-    --ig-link: raw(get(accent))
-    --ig-error-or-destructive: raw(get('red'))
-    --ig-success: raw(get('green'))
-
-  // Sidebar
-  .x1xgvd2v
-    background-color: get('crust')
-
-    &[style='transform: translateX(0px);']
-      background-color: get('mantle')
-
-  .x1zvrr1
-    background-color: get('mantle')
+  .x1zvrr1 {
+    background-color: get('mantle');
+  }
 
   // Posts
-  ._aggc
-    padding: 1em
-    background-color: get('mantle')
-    border: 1px solid get('overlay0') !important
-    border-radius: var(--modal-border-radius)
-    box-sizing: border-box
+  ._aggc {
+    padding: 1em;
+    background-color: get('mantle');
+    border: 1px solid get('overlay0') !important;
+    border-radius: var(--modal-border-radius);
+    box-sizing: border-box;
+  }
 
-  ._aatc ._aasi
-  ._ae1i
-  ._aggc textarea.xvbhtw8
-    background-color: get('mantle')
+  ._aatc ._aasi,
+  ._ae1i,
+  ._aggc textarea.xvbhtw8 {
+    background-color: get('mantle');
+  }
 
   // Icons
-  svg
-    color: get('text')
-    fill: get('text')
+  svg {
+    color: get('text');
+    fill: get('text');
+  }
 
   // The close icon on the dark wrapper
-  svg[aria-label='Close']
-    color: var(--web-always-white)
+  svg[aria-label='Close'] {
+    color: var(--web-always-white);
+  }
 
   // Inside primary buttons
-  .xzloghq
-  ._acas:not(._acao)
-    &, svg
-      color: get('base')
-      fill: get('base')
+  .xzloghq,
+  ._acas:not(._acao) {
+    &,
+    svg {
+      color: get('base');
+      fill: get('base');
+    }
+  }
 
   // Secondary buttons
-  .x1gjpkn9
-  ._acat
-  ._acap
-    &, a&
-      &, &:visited
-        color: get('text')
+  .x1gjpkn9,
+  ._acat,
+  ._acap {
+    &,
+    a& {
+      &,
+      &:visited {
+        color: get('text');
+      }
+    }
+  }
 
   // Profile banner
-  div:has(> .x1mu97ne)
-    background-color: get('crust')
-    border: 1px solid get('overlay0')
-    box-shadow: 0 10px 35px 2px rgba(dark, 0.7)
+  div:has(> .x1mu97ne) {
+    background-color: get('crust');
+    border: 1px solid get('overlay0');
+    box-shadow: 0 10px 35px 2px get_transparency(dark_color, 0.7);
+  }
 
   // Dialog overlay
-  .x7r02ix[role='dialog']
-    box-shadow: 0 5px 10px 0 rgba(light, 0.5)
+  .x7r02ix[role='dialog'] {
+    box-shadow: 0 5px 10px 0 get_transparency(light_color, 0.5);
+  }
 
   // Input placeholders
-  ._ac4d::placeholder
-  ._aauy::placeholder
-  textarea::placeholder
-    color: get('subtext0')
+  ._ac4d::placeholder,
+  ._aauy::placeholder,
+  textarea::placeholder {
+    color: get('subtext0');
+  }
 
   // Settings
-  ._ab81
-    background-color: get('mantle')
+  ._ab81 {
+    background-color: get('mantle');
+  }
 
-  ._ab85
-  ._ab6i
-  ._ab85 .xvbhtw8
-  ._aav4
-    background-color: get('crust')
+  ._ab85,
+  ._ab6i,
+  ._ab85 .xvbhtw8,
+  ._aav4 {
+    background-color: get('crust');
+  }
 
   // Map pop-ups
-  .leaflet-popup-content-wrapper
-  .leaflet-popup-tip
-    background-color: get('mantle')
-    box-shadow: 0 5px 15px rgba(dark, 0.4)
+  .leaflet-popup-content-wrapper,
+  .leaflet-popup-tip {
+    background-color: get('mantle');
+    box-shadow: 0 5px 15px get_transparency(dark_color, 0.4)
 
-    *
-      color: get('text') !important
+    * {
+      color: get('text') !important;
+    }
+  }
   
   // Scrollbar
-  ::-webkit-scrollbar
-    width: (scrollbar_width)px
-    background-color: get('surface0')
+  ::-webkit-scrollbar {
+    width: (scrollbar_width)px;
+    background-color: get('surface0');
+  }
   
-  ::-webkit-scrollbar-thumb
-    background-color: get(accent)
-    border-radius: 10px
-
-@-moz-document regexp('^.*instagram.com/direct.*')
+  ::-webkit-scrollbar-thumb {
+    background-color: get(accent);
+    border-radius: 10px;
+  }
+}
+  
+@-moz-document regexp('^.*instagram.com/direct.*') {
   // Chat background
-  .xnz67gz
-    background-color: get('base')
+  .xnz67gz {
+    background-color: get('base');
+  }
 
-  .xvbhtw8
-    background-color: get('mantle')
+  .xvbhtw8 {
+    background-color: get('mantle');
+  }
 
-  ._aa5c
-  ._aa4j
-  ._abyk
-    background-color: get('crust')
+  ._aa5c,
+  ._aa4j,
+  ._abyk {
+    background-color: get('crust');
+  }
+}
