Use crust for scrollbar background

--- a/catppuccin-instagram.user.css
+++ b/catppuccin-instagram.user.css
@@ -196,7 +196,7 @@
   // Scrollbar
   ::-webkit-scrollbar {
     width: (scrollbar_width)px;
-    background-color: get('surface0');
+    background-color: get('crust');
   }
   
   ::-webkit-scrollbar-thumb {
