Fix the background of hovered menu elements

--- a/catppuccin-instagram.user.css
+++ b/catppuccin-instagram.user.css
@@ -65,6 +65,7 @@
     --ig-banner-background: get('crust', 'raw');
     --ig-highlight-background: get('surface0', 'raw');
     --ig-elevated-background: get('crust', 'raw');
+    --hover-overlay: get_transparency('surface0', 0.2);
 
     --ig-primary-button: get(accent, 'raw');
     --ig-primary-button-hover: get(accent, 'raw'), 0.8;
