--- a/src/catppuccin.user.css
+++ b/src/catppuccin.user.css
@@ -95,6 +95,7 @@
     --ig-link: get(accent, 'raw');
     --ig-error-or-destructive: get('maroon', 'raw');
     --ig-success: get('green', 'raw');
+    --blue-2: get('blue', 'raw');
   }
   
   // Text selection
